# selenium-component-factory

./: .gitignore  .pypirc  LICENSE  README.md  component.py  pyproject.toml
.github/workflows/: python-publish.yml
seleniumcompfactory/: ComponentFactory.py
tests/: __init__.py  selenium_unittest.py
